[package]
name = "soundecology-app"
version = "0.1.0"
description = "SoundscapeAnalytics — acoustic index calculator"
authors = ["Francisco Rivas"]
edition = "2021"

[lib]
name = "soundecology_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
rustfft = "6.2"
realfft = "3.5"
rayon = "1.10"
thiserror = "2"
csv = "1.3"
image = "0.25"
chrono = "0.4"
imageproc = "0.25"
ab_glyph = "0.2"
