[package]
name = "soundscapeanalytics-app"
version = "0.1.0"
description = "SoundscapeAnalytics — acoustic index calculator"
authors = ["Francisco Rivas"]
edition = "2021"

[lib]
name = "soundscapeanalytics_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
rust_xlsxwriter = "0.79"
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow"] }
rustfft = "6.2"
realfft = "3.5"
rayon = "1.10"
thiserror = "2"
csv = "1.3"
image = "0.25"
chrono = "0.4"
imageproc = "0.25"
ab_glyph = "0.2"
